logs/itculate-sdk.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/examples'...
Compiling './lib/python3.5/site-packages/examples/step_function.py'...
***   File "./lib/python3.5/site-packages/examples/step_function.py", line 168
    print "invocations {} duration {} queue {} errors {}".format(invocations, duration, queue_size, errors)
                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/examples/util.py'...
***   File "./lib/python3.5/site-packages/examples/util.py", line 217
    print "Flush timeseries for {}".format(vertex)
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/itculate_sdk'...
Compiling './lib/python3.5/site-packages/itculate_sdk/payload.py'...
***   File "./lib/python3.5/site-packages/itculate_sdk/payload.py", line 194
    def convert_sample((ts, value)):
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/itculate_sdk/statsd'...
Listing './lib/python3.5/site-packages/itculate_sdk-0.14.6.egg-info'...
Listing './lib/python3.5/site-packages/msgpack'...
Listing './lib/python3.5/site-packages/msgpack_python-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/idna'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.12.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/unix_dates'...
Listing './lib/python3.5/site-packages/unix_dates-0.4.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
